# persistent-relational-record

./: .gitignore  .travis.yml  ChangeLog.md  README.md  persistent-relational-record.cabal  stack.yaml
.github/workflows/: haskell.yml
.travis/: stack-lts-2.yaml  stack-lts-5-hrrhead.yaml  stack-lts-5.yaml  stack-lts-6.yaml  stack-lts-7.yaml  stack-lts-8-hrrhead.yaml  stack-lts-8.yaml  stack-lts-9-hrrhead.yaml  stack-lts-9.yaml
examples/: Config.hs  Image.hs  ImageTag.hs  Model.hs  Query.hs  Tag.hs  Types.hs  main.hs
src/Database/Persist/: Relational.hs
src/Database/Persist/Relational/: Config.hs  Instances.hs  TH.hs  ToPersistEntity.hs
tests/: QueryTest.hs  hlint.hs  spec_main.hs  unit.hs
tests/Fixtures/BlogSample/: Model.hs  Post.hs  PostTag.hs  Tag.hs  User.hs
