name:                persistent-relational-record
version:             0.3.0
synopsis:            relational-record on persisten backends.
description:         Please see the README on Github at <https://github.com/himura/persistent-relational-record#readme>
homepage:            http://github.com/himura/persistent-relational-record
license:             BSD3
license-file:        LICENSE
author:              Takahiro HIMURA
maintainer:          taka@himura.jp
copyright:           2015 Takahiro Himura
category:            Database
build-type:          Simple
cabal-version:       >=1.10

tested-with:         GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.7

extra-source-files:
  .gitignore
  ChangeLog.md
  README.md
  stack.yaml

flag test-examples
  default: False
  manual: False

library
  hs-source-dirs:      src
  build-depends:       base >= 4.9 && < 5
                     , array
                     , conduit >= 1.3.0
                     , containers
                     , mtl
                     , names-th
                     , persistable-record >= 0.6
                     , persistent >= 2.7.1 && < 2.12
                     , relational-query >= 0.12.0.0
                     , resourcet >= 1.1
                     , template-haskell >= 2.11
                     , text >= 0.8
  default-language:    Haskell2010
  exposed-modules:     Database.Persist.Relational
                       Database.Persist.Relational.Config
                       Database.Persist.Relational.Instances
                       Database.Persist.Relational.TH
  ghc-options:         -Wall

test-suite unittest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             spec_main.hs
  build-depends:       base
                     , persistent
                     , persistent-template < 2.12
                     , relational-query
                     , tasty
                     , tasty-hunit
                     , tasty-th
                     , text
                     , time
                     , persistent-relational-record
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2 -fsimpl-tick-factor=200
  default-language:    Haskell2010
  other-modules:       Fixtures.BlogSample.Model
                       QueryTest

test-suite examples
  type:                exitcode-stdio-1.0
  hs-source-dirs:      examples
  main-is:             main.hs

  if !flag(test-examples)
    buildable: False
  else
    build-depends:     base
                     , bytestring
                     , conduit
                     , monad-logger
                     , persistable-record
                     , persistent
                     , persistent-mysql
                     , persistent-template
                     , relational-query
                     , resourcet
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , persistent-relational-record
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2 -fsimpl-tick-factor=120
  default-language:    Haskell2010
  other-modules:       Model
                       Types
                       Query

source-repository head
  type:     git
  location: https://github.com/himura/persistent-relational-record
