cabal-version:      >=1.10
name:               persistent-relational-record
version:            0.3.0
license:            BSD3
license-file:       LICENSE
copyright:          2015 Takahiro Himura
maintainer:         taka@himura.jp
author:             Takahiro HIMURA
tested-with:        ghc ==8.6.5 ghc ==8.8.4 ghc ==8.10.7
homepage:           http://github.com/himura/persistent-relational-record
synopsis:           relational-record on persistent backends.
description:
    Please see the README on Github at <https://github.com/himura/persistent-relational-record#readme>

category:           Database
build-type:         Simple
extra-source-files:
    .gitignore
    ChangeLog.md
    README.md
    stack.yaml

source-repository head
    type:     git
    location: https://github.com/himura/persistent-relational-record

flag test-examples
    default: False

library
    exposed-modules:
        Database.Persist.Relational
        Database.Persist.Relational.Config
        Database.Persist.Relational.Instances
        Database.Persist.Relational.TH

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.9 && <5,
        array,
        conduit >=1.3.0,
        containers,
        mtl,
        names-th,
        persistable-record >=0.6,
        persistent >=2.7.1 && <2.12,
        relational-query >=0.12.0.0,
        resourcet >=1.1,
        template-haskell >=2.11,
        text >=0.8

test-suite unittest
    type:             exitcode-stdio-1.0
    main-is:          spec_main.hs
    hs-source-dirs:   tests
    other-modules:
        Fixtures.BlogSample.Model
        QueryTest

    default-language: Haskell2010
    ghc-options:
        -Wall -threaded -rtsopts -with-rtsopts=-N -O2
        -fsimpl-tick-factor=200

    build-depends:
        base,
        persistent,
        persistent-template <2.12,
        relational-query,
        tasty,
        tasty-hunit,
        tasty-th,
        text,
        time,
        persistent-relational-record

test-suite examples
    type:             exitcode-stdio-1.0
    main-is:          main.hs
    hs-source-dirs:   examples
    other-modules:
        Model
        Types
        Query

    default-language: Haskell2010
    ghc-options:
        -Wall -threaded -rtsopts -with-rtsopts=-N -O2
        -fsimpl-tick-factor=120

    if !flag(test-examples)
        buildable: False

    else
        build-depends:
            base,
            bytestring,
            conduit,
            monad-logger,
            persistable-record,
            persistent,
            persistent-mysql,
            persistent-template,
            relational-query,
            resourcet,
            template-haskell,
            text,
            time,
            transformers,
            persistent-relational-record
